// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminProductSubscriptionBillingLink linked billing 1`] = `
<DocumentFragment>
  <div
    class="site-admin-product-subscription-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <a
        class="anchorLink mr-2 d-flex align-items-center"
        href="https://example.com"
      >
        View billing subscription 
        <externallinkicon
          class="iconInline ml-1"
        />
      </a>
      <button
        class="btn btnSecondary btnSm"
        type="button"
      >
        Unlink
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SiteAdminProductSubscriptionBillingLink no linked billing 1`] = `
<DocumentFragment>
  <div
    class="site-admin-product-subscription-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="btn btnSecondary btnSm"
        type="button"
      >
        Link billing subscription
      </button>
    </div>
  </div>
</DocumentFragment>
`;
